--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Esto es una prueba desde la clase</h1>
 <button type="button" onclick="pulsado(this)">No pulses!</button>
-
+<h2> Esto es una prueba subida por AsturJedi </h2>
 <script src="javascript/codigo.js"></script>
 </body>
 </html>
