--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
 		<title> Curso de Verano HTML5		</title>
-		<link rel="stylesheet" href="estilos.css">
-		<script src="codigo.js">		</script>
+		<link rel="stylesheet" href="css/estilos.css">
+		<script src="javascript/codigo.js">		</script>
 	</head>
 	
 	<body>
