Prueba desde casa, añadido pie de página

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
 			<button>Enviar</button>
 		</form>
 		
+		<footer>
+			© 2013 Web AsturJedi, todos los derechos reservados.
+			
+		</footer>
 		
 	</body>
 
