Añadidos contenidos y modificados los archivos
Añadida una carpeta con las imágenes.

--- a/copia_seg.html
+++ b/copia_seg.html
@@ -20,7 +20,7 @@
 		<!-- Esto es un comentario -->
 		
 		<h3> Imagen del día </h3>
-		<img src="link.jpg" 
+		<img src="imags/link.jpg" 
 			alt="Imágen de Link héroe del juego Legend of Zelda"
 			title="Imágen de Link héroe del juego Legend of Zelda"> 
 			<!-- No es necesario cerrar con </img>  -->
