--- a/datos_contacto.html
+++ b/datos_contacto.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
 <link rel="stylesheet" href="css/estilos.css">
-
+<link href='imags/favicon.ico' rel='shortcut icon' type='image/x-icon'/>
+<title> Webmaster AsturJedi </title>
 <meta name="author" content="Arturo Baz">
 <meta charset="utf-8" />
 
