--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<!-- <meta charset="utf-8" /> <!-- Aquí da problemas pero en los datos de contacto no -->
 		<meta name="author" content="Arturo Baz">
+		<link href='imags/favicon.ico' rel='shortcut icon' type='image/x-icon'/>
 		<title> Página Web del Curso de Verano HTML5 </title>
 		<link rel="stylesheet" href="css/estilos.css">
 		<script src="javascript/codigo.js"></script>
@@ -78,12 +79,11 @@
 			
 			<p>
 				Email: <a class="sub" href="mailto:adela@restaurantecasaadela.com" target="_blank">adela@restaurantecasaadela.com</a><br>
-				<br>Teléfono: <a class="sub" style="color:#0000FF" >985 69 73 92</a><br>
-			</p>
-			
-			<p>
-			<a class="sub" href="https://maps.google.es/maps?f=q&amp;source=embed&amp;hl=es&amp;geocode=&amp;q=calle+les+escueles,+lada,+langreo&amp;aq=&amp;sll=43.299525,-5.708492&amp;sspn=0.012946,0.01929&amp;ie=UTF8&amp;hq=&amp;hnear=Calle+les+Escueles,+33934+Llangr%C3%A9u,+Asturias&amp;t=m&amp;ll=43.303258,-5.705767&amp;spn=0.021862,0.036478&amp;z=14" style="color:#0000FF;text-align:left" > Como Llegar (enlace a Google Maps) </a></li>
-			<br>
+				<br>
+				Teléfono: <a class="sub" style="color:#0000FF" >985 69 73 92</a><br>
+				<br>
+				Como llegar: <a class="sub" href="https://maps.google.es/maps?f=q&amp;source=embed&amp;hl=es&amp;geocode=&amp;q=calle+les+escueles,+lada,+langreo&amp;aq=&amp;sll=43.299525,-5.708492&amp;sspn=0.012946,0.01929&amp;ie=UTF8&amp;hq=&amp;hnear=Calle+les+Escueles,+33934+Llangr%C3%A9u,+Asturias&amp;t=m&amp;ll=43.303258,-5.705767&amp;spn=0.021862,0.036478&amp;z=14" style="color:#0000FF;text-align:left" > Enlace a Google Maps </a></li><br>
+				
 			</p>
 			
 			<details>
@@ -129,6 +129,7 @@
 						<a href="http://www.youtube.com/watch?v=NBtP9_oHY2o" target="_blank" /></a>
 						-->
 						<p>Tu navegador no soporta el vídeo</p>
+						
 					</video>
 			</div>
 		
